testsuite/gnatprove/tests/ug__check_param_aliasing/test.out
 error: writable actual for "Out_1" overlaps with actual for "Out_2"
--> check_param_aliasing.adb:8:45
    8 |       Whatever (In_1 => X, In_2 => X, Out_1 => X, Out_2 => X);  --  illegal
      |                                                ^

 error: writable actual for "Out_1" overlaps with actual for "Out_2"
--> check_param_aliasing.adb:11:45
   11 |       Whatever (In_1 => Y, In_2 => Z, Out_1 => X, Out_2 => X);  --  illegal
      |                                                ^
check_param_aliasing.gpr: error: [Ada Global_Gen] check_param_aliasing.adb (check_param_aliasing.gpr) failed with status 5
gnatprove: error during flow analysis and proof
